fix: Update game template and AI service for Expo SDK 54 compatibility
- Update AI service to generate SDK 54 compatible code with default exports
- Add markdown code block stripping in AI response parser
- Update game-generator fallback structure for SDK 54
- Fix github.service for org repos and git identity configuration
- Update game-template to SDK 54 with proper dependencies
- Add babel.config.js, .npmrc, and _layout.tsx to template
- Standardize all screen components to use default exports

--- a/.env.template
+++ b/.env.template
@@ -1,17 +1,17 @@
 # AI API Configuration
-ANTHROPIC_API_KEY=your_anthropic_api_key_here
+ANTHROPIC_API_KEY=
 
 # GitHub Configuration
-GITHUB_TOKEN=your_github_personal_access_token
-GITHUB_ORG=your_github_username_or_org
+GITHUB_TOKEN=
+GITHUB_ORG=
 
 # Expo/EAS Configuration
-EXPO_TOKEN=your_expo_access_token
+EXPO_TOKEN=
 
 # Google Play Configuration
-GOOGLE_PLAY_SERVICE_ACCOUNT_EMAIL=your-service-account@your-project.iam.gserviceaccount.com
-GOOGLE_PLAY_SERVICE_ACCOUNT_KEY_PATH=./secrets/google-play-key.json
-GOOGLE_PLAY_PACKAGE_PREFIX=com.yourcompany.game
+GOOGLE_PLAY_SERVICE_ACCOUNT_EMAIL=
+GOOGLE_PLAY_SERVICE_ACCOUNT_KEY_PATH=
+GOOGLE_PLAY_PACKAGE_PREFIX=
 
 # AdMob Configuration (Default values, can be overridden per game)
 ADMOB_APP_ID=ca-app-pub-3940256099942544~3347511713
@@ -20,7 +20,7 @@ ADMOB_INTERSTITIAL_ID=ca-app-pub-3940256099942544/1033173712
 
 # IAP Configuration
 IAP_COINS_50_SKU=coins_50
-IAP_COINS_100_SKU=coins_100
+IAP_COINS_100_SKU=coins_100cd Agent
 IAP_COINS_500_SKU=coins_500
 IAP_LIVES_5_SKU=lives_5
 
