--- a/game-template/package.json
+++ b/game-template/package.json
@@ -1,7 +1,7 @@
 {
   "name": "game-template",
   "version": "1.0.0",
-  "main": "expo-router",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -11,30 +11,29 @@
     "lint": "eslint . --ext .ts,.tsx"
   },
   "dependencies": {
-    "expo": "~50.0.0",
-    "expo-router": "~3.4.0",
-    "expo-status-bar": "~1.11.1",
-    "react": "18.2.0",
-    "react-native": "0.73.2",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-google-mobile-ads": "^13.0.0",
-    "react-native-iap": "^12.13.0",
-    "expo-constants": "~15.4.0",
-    "@react-native-async-storage/async-storage": "1.21.0"
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "expo": "~54.0.0",
+    "expo-constants": "~17.1.0",
+    "expo-linking": "~7.1.0",
+    "expo-router": "~5.0.0",
+    "expo-status-bar": "~2.2.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.2",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
+    "react-native-web": "~0.20.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
-    "@types/react-native": "^0.73.0",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.0.0",
-    "eslint-config-expo": "^7.0.0",
+    "@babel/core": "^7.26.0",
+    "@types/react": "~19.0.10",
+    "typescript": "~5.8.3",
     "jest": "^29.7.0",
-    "@testing-library/react-native": "^12.4.0",
-    "jest-expo": "~50.0.0",
-    "typescript": "^5.3.0"
+    "jest-expo": "~54.0.0",
+    "@testing-library/react-native": "^13.0.0",
+    "react-test-renderer": "19.0.0"
   },
   "jest": {
     "preset": "jest-expo",
