fix: Pass correct GameSpec object to ImageService

--- a/.env.template
+++ b/.env.template
@@ -3,7 +3,7 @@ ANTHROPIC_API_KEY=
 
 # Image Generation API Configuration
 IMAGE_API_PROVIDER=openai  # openai, stability, replicate
-IMAGE_API_KEY=your_image_api_key_here
+IMAGE_API_KEY=
 IMAGE_API_BASE_URL=https://api.openai.com/v1/images/generations
 
 # GitHub Configuration
