refactor: Rename GITHUB_TOKEN to GIT_TOKEN to avoid GitHub secrets naming conflict

--- a/.env.template
+++ b/.env.template
@@ -7,7 +7,7 @@ IMAGE_API_KEY=
 IMAGE_API_BASE_URL=https://api.openai.com/v1/images/generations
 
 # GitHub Configuration
-GITHUB_TOKEN=
+GIT_TOKEN=
 GITHUB_ORG=
 
 # Expo/EAS Configuration
