refactor: Rename GITHUB_ORG to GIT_ORG to avoid GitHub secrets naming conflict

--- a/.env.template
+++ b/.env.template
@@ -8,7 +8,7 @@ IMAGE_API_BASE_URL=https://api.openai.com/v1/images/generations
 
 # GitHub Configuration
 GIT_TOKEN=
-GITHUB_ORG=
+GIT_ORG=
 
 # Expo/EAS Configuration
 EXPO_TOKEN=
