--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # PostgreSQL Database
   postgres:
@@ -55,7 +53,7 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
-    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload --reload-exclude "storage/*"
 
   # Celery Worker
   celery-worker:
@@ -101,11 +99,19 @@ services:
       dockerfile: Dockerfile
     container_name: gamefactory-flower
     environment:
+      - DATABASE_URL=postgresql+asyncpg://gamefactory:gamefactory@postgres:5432/gamefactory
+      - REDIS_URL=redis://redis:6379/0
       - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/1
     ports:
       - "5555:5555"
+    volumes:
+      - ./backend:/app
     depends_on:
-      - redis
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
     command: celery -A app.workers.celery_app flower --port=5555
 
   # Next.js Frontend
